--- a/css/index.scss
+++ b/css/index.scss
@@ -10,8 +10,10 @@
     width   : var(--widthCont);
     header {
         text-align: center;
+        margin-bottom: 150px;
     }
     main {
+        display: flex;
         menu {
             position        : var(--absol);
             top             : 300px;
@@ -53,7 +55,9 @@
             }
         }
         .menuGame {
-            position      : relative;
+            //position      : relative;
+            top:50px;
+            left: 270px;
             width         : 940px;
             height        : 100px;
             vertical-align: middle;
@@ -96,7 +100,7 @@
             }
         }
         
-        canvas {
+        .canvasJogo {
             margin: auto;
             width           : var(widthCnv);
             height          : 900px;
@@ -104,7 +108,18 @@
             border-style: ridge;
             background-color: rgba(109, 116, 214, 0.774);
         }
+        aside{
+        .canvasScore{
+            width: 400px;
+            height: 900px;
+
+            border: 20px blue;
+            border-style: ridge;
+            background-color: rgba(109, 116, 214, 0.774);
+        }
+        }
     }
+    
     footer {
         text-align: center;
 
