--- a/css/index.scss
+++ b/css/index.scss
@@ -1,6 +1,6 @@
 :root {
-    --widthCont: 940px;
-    --widthCnv : 900px;
+    --widthCont: 1366px;
+    --widthCnv : 800px;
     --widthMenu: 400px;
     --absol    : absolute;
 }
@@ -16,8 +16,8 @@
         display: flex;
         menu {
             position        : var(--absol);
-            top             : 300px;
-            left            : calc(calc(var(--widthCont) - var(--widthMenu))/2);
+            top             : 225px;
+            left            :  calc(calc(var(--widthCont)/2) - 200px);
             margin          : auto;
             text-align: center;
             width           : 400px;
@@ -33,7 +33,7 @@
                 width     : 240px;
                 height    : 80px;
                 margin    : auto;
-                font-size : 2rem;
+                font-size : 3rem;
                 border    : none;
                 border-radius: 5px;
                 background-color: rgb(28, 28, 179);
@@ -57,8 +57,8 @@
         .menuGame {
             //position      : relative;
             top:50px;
-            left: 270px;
-            width         : 940px;
+            left: 530px;
+            width         : 840px;
             height        : 100px;
             vertical-align: middle;
             margin        : 40px;
@@ -102,21 +102,23 @@
         
         .canvasJogo {
             margin: auto;
-            width           : var(widthCnv);
-            height          : 900px;
+            width           : 800px;
+            height          : 500px;
             border: 20px blue;
             border-style: ridge;
             background-color: rgba(109, 116, 214, 0.774);
         }
         aside{
-        .canvasScore{
-            width: 400px;
-            height: 900px;
-
-            border: 20px blue;
-            border-style: ridge;
+            width: 200px;
+            height: 500px;
+            border:20px ridge blue ;
             background-color: rgba(109, 116, 214, 0.774);
         }
+        #painel{
+            width: 200px;
+            height: 500px;
+            border:20px ridge blue ;
+            background-color: rgba(109, 116, 214, 0.774);
         }
     }
     
